k8s/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "scooty"
  namespace: "scooter"
  labels:
    app: "ride"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "ride"
  template:
    metadata:
      labels:
        app: "ride"
    spec:
      containers:
        - name: "scooty"
          image: "105100039253.dkr.ecr.ap-southeast-1.amazonaws.com/purnima-k8s:IMAGE_ID"
          resources:
            requests:
              memory: "64Mi"
              cpu: "500m"
            limits:
              memory: "128Mi"
              cpu: "500m"
