k8s/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "scooty"
  namespace: "scooter"
  labels:
    app: "ride"
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: "ride"
  type: "ClusterIP"
