k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scooty
  namespace: scooter
  annotations: 
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:105100039253:certificate/b6907d65-c197-4fc7-8034-7033493adae3
spec:
  ingressClassName: alb
  rules:
  - host: cloud.purnimadevops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scooty
            port:
              number: 80
